--- a/my-first-project/package.json
+++ b/my-first-project/package.json
@@ -37,6 +37,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.6.2",
+    "tailwind-scrollbar": "^4.0.2",
     "typescript": "~5.9.2"
   }
 }
